# rosenkranz_family_tree

./: .gitignore  README.md  pyproject.toml
family_tree/: env.py  settings.py  urls.py
member/: admin.py  forms.py  models.py  urls.py  views.py
member/migrations/: 0001_initial.py  0002_relation.py  0003_alter_relation_relation_type.py  0004_alter_member_gender_alter_relation_relation_type.py
member/templates/member/: create.html  detail.html
