[tool.poetry]
name = "family-tree"
version = "0.1.0"
description = ""
authors = ["MatRos-sf <mateuszrosenkranz@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.6"
pre-commit = "^3.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
